--- a/data/graphics/animations/small_mario_to_mario/config.json
+++ b/data/graphics/animations/small_mario_to_mario/config.json
@@ -1,1 +1,1 @@
-{"frames": [5, 5, 5, 5, 5, 10], "loop": false, "speed": 1, "scale": 3, "centered": false}
+{"frames": [3, 3, 5, 3, 3, 5, 3, 3, 5, 10], "loop": false, "speed": 1, "scale": 3, "centered": false}
