--- a/data/graphics/animations/coin_from_block/config.json
+++ b/data/graphics/animations/coin_from_block/config.json
@@ -1,1 +1,1 @@
-{"frames": [3, 6, 9, 6], "loop": true, "speed": 1, "scale": 3, "centered": true}
+{"frames": [3, 6, 9, 6], "loop": true, "speed": 1, "scale": 3, "centered": true, "flip": false}
