--- a/data/graphics/animations/goomba_die/config.json
+++ b/data/graphics/animations/goomba_die/config.json
@@ -1,1 +1,1 @@
-{"frames": [10], "loop": false, "speed": 1, "scale": 3, "centered": false}
+{"frames": [10], "loop": false, "speed": 1, "scale": 3, "centered": false, "flip": false}
