--- a/data/graphics/animations/goomba_moving/config.json
+++ b/data/graphics/animations/goomba_moving/config.json
@@ -1,1 +1,1 @@
-{"frames": [10, 10], "loop": true, "speed": 1, "scale": 3, "centered": false}
+{"frames": [10, 10], "loop": true, "speed": 1, "scale": 3, "centered": false, "flip": false}
