--- a/data/graphics/animations/question_block/config.json
+++ b/data/graphics/animations/question_block/config.json
@@ -1,1 +1,1 @@
-{"frames": [15, 10, 5, 10], "loop": true, "speed": 1, "scale": 3, "centered": false}
+{"frames": [15, 10, 5, 10], "loop": true, "speed": 1, "scale": 3, "centered": false, "flip": false}
