--- a/data/graphics/animations/mario_hold/config.json
+++ b/data/graphics/animations/mario_hold/config.json
@@ -1,1 +1,1 @@
-{"frames": [5], "loop": false, "speed": 1, "scale": 3, "centered": false, "flip": false}
+{"frames": [10, 10], "loop": true, "speed": 1, "scale": 3, "centered": false, "flip": false}
